[gd_scene load_steps=9 format=3 uid="uid://b805r3y74x36t"]

[ext_resource type="Texture2D" uid="uid://cj3jqqc1eh0t4" path="res://assets/sprites/nut_cracker.png" id="1_jpf4a"]
[ext_resource type="Script" uid="uid://ma7ho8u0clnw" path="res://scripts/ui/powerup_tile.gd" id="1_obefp"]
[ext_resource type="FontFile" uid="uid://cbxioj0mtjvhn" path="res://assets/fonts/Kingthings Christmas 2.2.ttf" id="2_obefp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3hvsf"]
bg_color = Color(0.23137255, 0.23137255, 0.23137255, 0.8627451)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.5055694, 0.056706913, 0.051139683, 1)
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 15.0
expand_margin_top = 15.0
expand_margin_right = 15.0
expand_margin_bottom = 15.0
shadow_size = 4
shadow_offset = Vector2(2, 3)

[sub_resource type="LabelSettings" id="LabelSettings_62d67"]
font = ExtResource("2_obefp")
font_size = 42
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_0ecm0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ecoc2"]
resource_name = "mouse_over"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3333, 0.6667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.06981317007977318, 0.06981317007977318]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ipfdp"]
_data = {
&"RESET": SubResource("Animation_0ecm0"),
&"mouse_over": SubResource("Animation_ecoc2")
}

[node name="PowerupTile" type="Panel"]
custom_minimum_size = Vector2(256, 312)
offset_right = 256.0
offset_bottom = 312.0
pivot_offset = Vector2(128, 156)
theme_override_styles/panel = SubResource("StyleBoxFlat_3hvsf")
script = ExtResource("1_obefp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 4.0
offset_right = 260.0
offset_bottom = 308.0
theme_override_constants/separation = 12

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
texture = ExtResource("1_jpf4a")
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "NUT CRACKER"
label_settings = SubResource("LabelSettings_62d67")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ipfdp")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exit"]
